force-app/main/default/objects/Beat_Line__c/fields/Account1__c.field-meta.xml
<CustomField>
    <fullName>Account1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Account</label>
    <referenceTo>Account1__c</referenceTo>
    <relationshipLabel>Beat Lines</relationshipLabel>
    <relationshipName>Beat_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>