force-app/main/default/objects/Beat_Line__c/fields/Day_Order__c.field-meta.xml
<CustomField>
    <fullName>Day_Order__c</fullName>
    <label>Day Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day 1</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>Day 2</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>Day 3</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>Day 4</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>Day 5</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>Day 6</fullName>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>Day 7</fullName>
                <label>Sunday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>