force-app/main/default/objects/Beat_Line__c/fields/RouteName__c.field-meta.xml
<CustomField>
    <fullName>RouteName__c</fullName>
    <formula>Routes__r.Name</formula>
    <label>Municipality Name</label>
    <type>Text</type>
</CustomField>