force-app/main/default/objects/Beat_Line__c/fields/Routes__c.field-meta.xml
<CustomField>
    <fullName>Routes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipality</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Beat Lines</relationshipLabel>
    <relationshipName>Beat_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>